Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-116207
Ambient light is ignored if specular is set to 0.0
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2: Important
Fix Version/s:
6.6.0 Beta3
,
6.7.0 FF
Affects Version/s:
6.6.0 Beta2
Component/s:
Graphs: 3D
Labels:
None
Commits:
cadce8010 (dev), 69a2d36bd (6.6)
Description
Easily reproducible with qmltheme manual test.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Tomi Korpipää
Reporter:
Tomi Korpipää
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
18 Aug '23 10:01
Updated:
21 Aug '23 12:29
Resolved:
21 Aug '23 07:47
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Fix adjusting light properties to 0
Gerrit Review:
Fix adjusting light properties to 0
Gerrit Review: