Fix adjusting light properties to 0

If light brightness is 0.0, ambient light is
ignored. Make sure we obey both ambient and
specular lights by not letting specular
brightness reach 0.0.

Fixes: QTBUG-116207
Change-Id: I43f5e3a0a9bc035cfa7fa4ecbf6b3af9a7799f68
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit cadce8010bdc5003cf1ed65951d04fad5ecc2d99)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>